# CryptoWrap

./: .env_example  .gitignore  LICENSE.md  README.md  TODO.md  c-w.cv  docker-compose.blockchain.yml  docker-compose.yml  forward_all.sh  forward_db_local_port.sh  forward_db_port_from_prod_to_apply_migrations.sh  forward_monero_wallet_rpc_local_port.sh  litecoin-openapi.json  nginx_default.conf  sync_prod.sh
app/: Cargo.toml
app/assets/css/: checkout.css  dashboard.css  landing.css  welcome.css
app/assets/js/: checkout.js  dashboard.js  welcome.js
app/migration/: Cargo.toml
app/migration/src/: lib.rs  m20260220_121747_tokens_table.rs  m20260226_092939_monero_wallet.rs  m20260304_200054_deposits_table.rs  m20260411_003754_litecoin.rs  m20260510_110051_deposists_add_owner.rs  main.rs
app/src/: main.rs
app/src/entity/: deposits.rs  invoices.rs  litecoin_wallet.rs  mod.rs  monero_wallet.rs  prelude.rs  tokens.rs
app/src/routes/: auth.rs  auth_helper.rs  checkout.rs  dashboard.rs  dashboard_api.rs  deposit.rs  mod.rs  payment.rs  qr.rs  todo.rs  withdraw.rs
app/src/wallet/: litecoin.rs  litecoin_helper.rs  mod.rs  monero.rs  monero_helper.rs
app/templates/: auth.html  checkout.html  dashboard.html  landing.html  welcome.html
docs/: litecoin-openapi.json
scripts/: crontab_with_loggin_example.txt
