[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.15.4"
askama_web = { version = "0.15.1", features = ["axum-0.8"] }
axum = "0.8.8"
hex = "0.4.3"
hyper = { version = "1.8.1", features = ["full"] }
openssl = "0.10.75"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["trace", "fs"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
