[package]
name = "app"
version = "0.1.3"
edition = "2024"

[dependencies]
askama = "0.15.4"
askama_web = { version = "0.15.1", features = ["axum-0.8"] }
axum = "0.8.8"
axum-extra = { version = "0.12.6", features = ["cookie", "cookie-private"] }
base64 = "0.22.1"
blake3 = "1.8.3"
chrono = "0.4"
dotenvy = "0.15.7"
hex = "0.4.3"
hyper = { version = "1.8.1", features = ["full"] }
image = "0.25.10"
openssl = "0.10.75"
qrcode = "0.14.1"
reqwest = { version = "0.13.2", features = ["json"] }
rust_decimal = "1.37"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strum = { version = "0.28.0", features = ["derive"] }
strum_macros = "0.28.0"
tg_notify = "1.1.3"
thiserror = "2.0.18"
time = "0.3.47"
tokio = { version = "1.49.0", features = ["full"] }
tower = "0.5.3"
# tower-cookies = { version = "0.11.0", features = ["private"] }
tower-http = { version = "0.6.8", features = ["trace", "fs"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1.21.0", features = ["v4", "serde"] }

[dependencies.sea-orm]
features = ["debug-print", "runtime-tokio-native-tls", "sqlx-postgres", "macros", "rust_decimal", "postgres-vector"]
version = "~2.0.0-rc.32" # sea-orm version
